# db-tctt

./: .env  Dockerfile  docker-compose.yml  requirements.txt  traefik.dev.toml
app/: crud.py  db.py  main.py  models.py
backend/: Dockerfile  pyproject.toml  requirements.txt  run.py
backend/app/: config.py  main.py  models.py
backend/data/: database.db
backend/src/: auth.py  crud.py  db.py  main.py  models.py  utils.py
backend/src/auth/: jwthandler.py
backend/src/crud/: mission.py  platform.py  target.py  user.py
backend/src/database/: config.py  models.py
backend/src/routes/: mission.py  platform.py  target.py  user.py
backend/src/schemas/: mission.py  platform.py  target.py  user.py
dashboard/: Dockerfile  index.html  package.json  vite.config.js
dashboard/src/: App.vue  main.js
dashboard/src/components/: MissionList.vue  PlatformList.vue  TargetList.vue
dashboard/src/router/: index.js
dashboard/src/stores/: index.js
dashboard/src/stores/modules/login/: index.js
dashboard/src/views/: DashboardView.vue  NotFound.vue  SignInView.vue  SummaryView.vue
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/app/: package.json
